# mcp-seo

./: .gitignore  README.md  claude_desktop_config.json  main.py  test_chat.py  test_chat_lemonde.py  test_haloscan_direct.py  test_lafabrique.py
app/: __init__.py  config.py  dependencies.py  logging_config.py  main.py  models.py
app/mcp_tools/: __init__.py  base.py  registry.py
app/mcp_tools/haloscan/: __init__.py  get_user_credits.py
app/mcp_tools/haloscan/domains/: __init__.py  analyze_domain.py  domains_bulk.py  domains_competitors.py  domains_competitors_keywords_diff.py  domains_expired_reveal.py  domains_gmb_backlinks.py  domains_gmb_backlinks_categories.py  domains_gmb_backlinks_map.py  domains_history_pages.py  domains_history_positions.py  domains_keywords.py  domains_top_pages.py  domains_visibility_trends.py  find_domain_competitors.py  get_domain_top_pages.py  page_best_keywords.py  search_keywords_by_position.py
app/mcp_tools/haloscan/keywords/: __init__.py  analyze_keyword.py  find_keyword_matches.py  find_keywords.py  find_related_keywords.py  find_similar_keywords.py  get_keyword_highlights.py  get_keyword_questions.py  get_keyword_synonyms.py  get_keywords_serp_compare.py  get_keywords_site_structure.py  keywords_bulk.py  keywords_scrap.py  keywords_serp_available_dates.py  keywords_serp_compare.py  keywords_serp_page_evolution.py
app/routers/: __init__.py  advanced.py  chat.py  chat_chunked.py  domains.py  frontend.py  health.py  keywords.py  user.py
app/services/: __init__.py  chunking_service.py
config/: .env.example  claude_desktop_config.json  package.json  pyproject.toml  requirements.txt
scripts/: setup.sh
templates/: chat.html  chat_chunked.html  index.html
tests/: test_server.py
